feat: funcionalidad de obtener los procesos y mostrarlos en una tabla lista